# MAlice

./: .gitignore  MAlice.cabal  Makefile  README.md  compile  interactive  makefile  test.sh
doc/: report.lyx  specification.lyx
examples/: LONG.alice  arrays.alice  test.alice
examples/myexamples/: binary.alice  stack.alice  test  test.alice  test.j
examples/valid/: ackermann.3code  binarySearch.3code  lextab.py  parser.out  parsetab.py  sieveOfEratosthenes.j  test13.j
src/Control/: DeepSeq.hs
src/Data/: Array.hs
src/Flex:Bison/: Makefile  ast2.h  lexer.l  main.cpp  parser.y  parser.yy
src/Java/: parser.y
src/MAlice/: Console.hs
src/MAlice/CodeGen/: ASM.hs  AssemblyCodeGenerator.hs  CodeGen.hs  CodeGenState.hs  ExpressionAnalysis.hs  JavaByteCode.hs  JavaByteCodeInstr.hs  JavaByteCodeJunkLabels.hs  JavaByteCodeMissingReturns.hs  JavaByteCodeOperators.hs  JavaByteCodeOptimiser.hs  JavaByteCodeSetupInput.hs  JavaByteCodeStackCalculator.hs  JavaByteCodeThrowable.hs  JavaByteCodeUnitialisedReferences.hs  JavaByteCodeUtil.hs  JavaBytecode.hs  JavaBytecodeInstr.hs  JavaBytecodeJunkLabels.hs  JavaBytecodeLocals.hs  JavaBytecodeMissingReturns.hs  JavaBytecodeOperators.hs  JavaBytecodeOptimiser.hs  JavaBytecodeSetupInput.hs  JavaBytecodeStack.hs  JavaBytecodeThrowable.hs  JavaBytecodeUnitialisedReferences.hs  JavaBytecodeUtil.hs
src/MAlice/CodeGeneration/: ASM.hs  AssemblyCodeGenerator.hs  CodeGen.hs  CodeGenState.hs  ExpressionAnalysis.hs
src/MAlice/IR/: CodeGen.hs  IRTypes.hs  Types.hs
src/MAlice/Interactive/: Eval.hs  Parser.hs  Shell.hs  Types.hs
src/MAlice/Language/: AST.hs  PrettyPrint.hs  SymbolTable.hs  Types.hs  Utilities.hs
src/MAlice/Optimisation/: ASTOptimiser.hs
src/MAlice/Parser/: Parser.hs  ParserState.hs
src/MAlice/Parsing/: Parser.hs  ParserState.hs
src/MAlice/SemanticAnalysis/: ConstructChecker.hs  ExprChecker.hs  ScopeCheck.hs  StmtChecker.hs  TypeCheck.hs  TypeChecker.hs
src/MAlice/Transformation/: Abstract.hs  Annotate.hs  Collect.hs  Desugar.hs  Optimise.hs  Rename.hs  Strip.hs  Types.hs
src/haskell/: Scanner.x  hsmalice.cabal
src/hs-parser/: Parser.y  make.sh
src/parsec/: Main.hs
src_old/: main.cpp
src_old/Flex:Bison/: Makefile  ast2.h  main.cpp  token.h
src_old/Java/: lexer.l
src_old/haskell/: Main.hs  Parser.y
