name:
  MAlice

version:
  0.1
-- synopsis:            
-- description:         
-- license:             
license-file:
  LICENSE

author:
  Moritz Roth, Jamie Ridler

maintainer:
  mr2211@doc.ic.ac.uk
        
category:
  Development

build-type:
  Simple

cabal-version:
  >=1.10

executable compile
  Default-language:
    Haskell2010

  GHC-options:
    -Wall -O2

  Hs-source-dirs:
    src

  main-is:
    MAlice/Console.hs
       
  default-extensions:
    DeriveDataTypeable,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    MultiParamTypeClasses,
    Rank2Types

  build-depends:
    base             == 4.5.*,
    parsec,
    mtl,
    containers