name:
  MAlice

version:
  0.1
-- synopsis:            
-- description:         
-- license:             
license-file:
  LICENSE

author:
  Moritz Roth, Jamie Ridler

maintainer:
  mr2211@doc.ic.ac.uk
        
category:
  Development

build-type:
  Simple

cabal-version:
  >=1.10

executable compile
  Default-language:
    Haskell2010

  GHC-options:
    -O2
    -fno-warn-missing-signatures

  Hs-source-dirs:
    src

  main-is:
    MAlice/Console.hs
       
  default-extensions:
    BangPatterns

  build-depends:
    base             == 4.5.*,
    parsec,
    mtl,
    containers,
    vector,
    transformers     == 0.3.*
